--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
 <h3><a href="index.html">자세히 보기</a></h3>
 <li><a href="1.html">여기 윗 링크로 들어가면 카제오빠의 프로필을 볼 수 있습니다. 감상하세요! </a></li>
 <h1>
-    <ul><a href="2.html">이 글은 후지이 카제오빠의 일생을 적어두었습니다.
+    <ul><a href="2.html">이 글은 후지이 카제오빠의 일생을 적어두었습니다. </a>
 </h1>
 <h1 style="color:#D2691E;"></h1>&nbsp;&nbsp;
 <p>
